# ovca-core

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md
.github/workflows/: ci.yml
docs/: architecture.md  dependency-lock-change.md  limitations.md  policy-tools-authority.md  security-boundary.md  system-workflows.md
examples/: policy_tool_call.json
rust/: Cargo.toml
rust/ovca-auditor-server/: Cargo.toml
rust/ovca-auditor-server/src/: main.rs
rust/ovca-brain/: Cargo.toml
rust/ovca-brain/src/: cache.rs  lib.rs  permissions.rs  search.rs  tools.rs
rust/ovca-coordinator-server/: Cargo.toml
rust/ovca-coordinator-server/src/: main.rs
rust/ovca-engineer-server/: Cargo.toml
rust/ovca-engineer-server/src/: main.rs  ops_health.rs
rust/ovca-langgraph/: Cargo.toml
rust/ovca-langgraph/src/: lib.rs
rust/ovca-llm-client/: Cargo.toml
rust/ovca-llm-client/src/: agent_utils.rs  lib.rs  llm_client.rs  mcp_client.rs
rust/ovca-mcp/: Cargo.toml
rust/ovca-mcp/src/: lib.rs  server.rs  sse.rs
rust/ovca-observability/: Cargo.toml
rust/ovca-observability/src/: lib.rs
rust/ovca-policy-tools/: Cargo.toml
rust/ovca-policy-tools/src/: http_server.rs  lib.rs  main.rs  tier1.rs  tier2.rs  tier3.rs
rust/ovca-reviewer-server/: Cargo.toml
rust/ovca-reviewer-server/src/: main.rs
rust/ovca-runtime-core/: Cargo.toml
rust/ovca-runtime-core/src/: lib.rs
rust/ovca-storage/: Cargo.toml
rust/ovca-storage/src/: brain.rs  json.rs  jsonl.rs  lib.rs  sqlite.rs
rust/ovca-types/: Cargo.toml
rust/ovca-types/src/: lib.rs
scripts/: ovca.ps1
scripts/agent_tasks/: policy_gate.py
scripts/mcp/: __init__.py  base_server.py  policy_tools_server.py
scripts/tests/: test_cognitive_leadership_tools.py  test_ovca_startup_script.py  test_policy_gate.py  test_policy_tools.py  test_policy_tools_rust_parity.py  test_public_runtime_boundary.py
