[package]
name = "ovca-llm-client"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Oracle async HTTP client - provider-agnostic chat and inter-agent MCP calls"

[dependencies]
ovca-types = { path = "../ovca-types" }
ovca-storage = { path = "../ovca-storage" }
tokio        = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }
reqwest      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
dotenvy      = { workspace = true }
chrono       = { workspace = true }

[dev-dependencies]
tokio    = { workspace = true, features = ["full"] }
tempfile = { workspace = true }
axum     = { workspace = true }
