[package]
name = "ovca-storage"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Oracle file I/O layer - JSON, JSONL, brain markdown, and SQLite"

[dependencies]
ovca-types = { path = "../ovca-types" }
serde        = { workspace = true }
serde_json   = { workspace = true }
serde_yaml   = { workspace = true }
chrono       = { workspace = true }
regex        = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
dashmap      = { workspace = true }
rusqlite     = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
